# linrar

./: README.md
argobots/examples/dynamic-es/: RaplPowerMonitor.c  RaplPowerMonitor_onetime  dyn_server.c  dyn_server_harper.c  power.txt  power2.txt
argobots/examples/dynamic-es/libmsr/: libmsr_get.c  libmsr_test  libmsr_test.c
argobots/lib/: libabt.so.1.0.0
libmsr/: CMakeLists.txt
libmsr/demoapps/powmon/: Makefile  Makefile.in  aclocal.m4  config.h  config.h.in~  config.status  configure
libmsr/demoapps/powmon/autom4te.cache/: output.1  requests  traces.0  traces.1
libmsr/demoapps/powmon/src/: Makefile  Makefile.am  Makefile.in  highlander.c  jacobi  libmsr_test.c  power_wrapper_dynamic  power_wrapper_static  powmon  powmon.c  rapl1.c  rapl2.c
libmsr/demoapps/powmon/src/.deps/: power_wrapper_dynamic.Po  power_wrapper_static.Po  powmon.Po  rapl2.Po
libmsr/demoapps/powmon_edited/: Makefile  config.h  config.h.in  config.status  configure
libmsr/demoapps/powmon_edited/autom4te.cache/: output.0  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5
libmsr/demoapps/powmon_edited/m4/: de_libmsr_version.m4
libmsr/demoapps/powmon_edited/src/: Makefile  Makefile.in  rapl1.c  rapl2.c
libmsr/demoapps/powmon_edited/src/.deps/: highlander.Po
libmsr/libexec/libmsr/: msr-turbo
libmsr/share/cmake/libmsr/: libmsr-libs.cmake
libmsr/src/: CMakeLists.txt  msr_core.c  msr_rapl.c
libmsr/test/: Makefile  common.c  libmsr_test  libmsr_test.c  outp.txt
